# matchbook

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py
core/: book.py  engine.py  events.py  ledger.py  reconcile.py  risk.py  serde.py  types.py
sim/: pnl.py  session.py
strategy/: market_maker.py
tests/: test_engine.py  test_fuzz_invariants.py  test_ledger.py  test_serde.py  test_sim.py  test_strategy.py
